feat(ai-agent): 完成用户画像生成与推荐功能
- 实现基于学习记录的个性化用户画像生成
- 支持多用户差异化画像（用户ID: 1, 2, 3）
- 集成学习服务数据，实现跨服务数据联动
- 添加服务降级与默认画像fallback机制
- 优化认证配置，确保AI接口正常访问
- 创建并填充ai_user_profile数据库表
系统现在可根据用户画像提供个性化内容推荐。